<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="logo"
            type="String" />

        <variable
            name="symbol"
            type="String" />

        <variable
            name="name"
            type="String" />

        <variable
            name="price"
            type="String" />

        <variable
            name="marketCap"
            type="String" />

        <variable
            name="high24h"
            type="String" />

        <variable
            name="low24h"
            type="String" />

        <variable
            name="priceChange24h"
            type="String" />

        <variable
            name="marketCapChangePercentage24h"
            type="String" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/btn_like"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@android:drawable/star_big_off"
            android:layout_marginEnd="12dp"
            android:layout_marginTop="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/iv_logo"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="12dp"
            android:layout_marginTop="5dp"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.3" />

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="5dp"
            android:text="@{name}"
            android:textColor="#000000"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/iv_logo"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Currency name" />

        <TextView
            android:id="@+id/tv_symbol"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="5dp"
            android:text="@{symbol}"
            android:textColor="#000000"
            android:textSize="20sp"
            app:layout_constraintStart_toEndOf="@id/iv_logo"
            app:layout_constraintTop_toBottomOf="@id/tv_name"
            tools:text="Currency symbol" />

        <TextView
            android:id="@+id/tv_price_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="12dp"
            android:labelFor="@id/tv_price"
            android:text="@string/price"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_logo"
            tools:text="Current Price" />

        <TextView
            android:id="@+id/tv_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="5dp"
            android:labelFor="@id/tv_price"
            android:text="@{price}"
            android:textColor="#000000"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_price_label"
            tools:text="Current Price" />

        <TextView
            android:id="@+id/tv_market_cap_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="12dp"
            android:labelFor="@id/tv_price"
            android:text="@string/market_cap"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_price"
            tools:text="Market Cap Label" />

        <TextView
            android:id="@+id/tv_market_cap"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="5dp"
            android:labelFor="@id/tv_price"
            android:text="@{marketCap}"
            android:textColor="#000000"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_market_cap_label"
            tools:text="Market Cap" />

        <TextView
            android:id="@+id/tv_high_24h_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="12dp"
            android:labelFor="@id/tv_price"
            android:text="@string/highest_value_for_last_24_h"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_market_cap"
            tools:text="Highest 24 h Label" />

        <TextView
            android:id="@+id/tv_high_24h"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="5dp"
            android:labelFor="@id/tv_price"
            android:text="@{high24h}"
            android:textColor="#000000"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_high_24h_label"
            tools:text="Highest 24 h" />

        <TextView
            android:id="@+id/tv_price_change_24h_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="12dp"
            android:labelFor="@id/tv_price"
            android:text="@string/percentage_price_change"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_logo"
            tools:text="Price Change Label" />

        <TextView
            android:id="@+id/tv_price_change_24h"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="12dp"
            android:labelFor="@id/tv_price"
            android:text="@{priceChange24h}"
            android:textColor="#000000"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_price_change_24h_label"
            tools:text="Price Change" />

        <TextView
            android:id="@+id/tv_market_cap_change_24h_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="12dp"
            android:labelFor="@id/tv_price"
            android:text="@string/percentage_market_cap_change"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_price_change_24h"
            tools:text="Market Cap Change Label" />

        <TextView
            android:id="@+id/tv_market_cap_change_24h"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="12dp"
            android:labelFor="@id/tv_price"
            android:text="@{marketCapChangePercentage24h}"
            android:textColor="#000000"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_market_cap_change_24h_label"
            tools:text="Market Cap Change" />

        <TextView
            android:id="@+id/tv_low_24h_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="12dp"
            android:labelFor="@id/tv_price"
            android:text="@string/lowest_24_h"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_market_cap_change_24h"
            tools:text="Lowest 24 h Label" />

        <TextView
            android:id="@+id/tv_low_24h"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="12dp"
            android:labelFor="@id/tv_price"
            android:text="@{low24h}"
            android:textColor="#000000"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_low_24h_label"
            tools:text="Lowest 24 h" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>